--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,12 @@
     "firebase": "^9.6.10",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
+    "react-bootstrap-validation": "^0.1.11",
     "react-card-flip": "^1.1.5",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
