--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.2.3",
     "react-card-flip": "^1.1.5",
     "react-dom": "^17.0.2",
+    "react-google-map-picker": "^1.2.3",
     "react-hook-form": "^7.29.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
