--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "proxy": "http://127.0.0.1:3001",
   "dependencies": {
+    "@cometchat-pro/chat": "^3.0.6",
+    "@emotion/core": "^10.0.35",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "dateformat": "^4.0.0",
+    "emoji-mart": "^3.0.0",
     "firebase": "^9.6.10",
+    "html-react-parser": "^1.4.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
     "react-card-flip": "^1.1.5",
@@ -16,7 +21,13 @@
     "react-hook-form": "^7.29.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
+    "twemoji": "^13.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "babel-jest": "26.6.0",
+    "jest": "26.6.0",
+    "jest-canvas-mock": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,5 +52,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|scss|png|svg|pdf|jpg|jpeg|wav)$": "<rootDir>/src/resources/__mocks__/fileMock.js"
+    }
   }
 }
